[gd_scene load_steps=5 format=3 uid="uid://bs2l4dmmw2om6"]

[ext_resource type="Script" path="res://minigame/quiz/Scripts/game.gd" id="1_g8lkh"]
[ext_resource type="Texture2D" uid="uid://do2xhshjfjmu5" path="res://minigame/quiz/Assets/background.png" id="2_le2f0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jefce"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_d53fw"]
ItemList/colors/font_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
ItemList/colors/font_hovered_color = Color(0.95, 0.95, 0.95, 1)
ItemList/colors/font_outline_color = Color(1, 1, 1, 1)
ItemList/colors/font_selected_color = Color(1, 1, 1, 1)
ItemList/colors/guide_color = Color(0.701961, 0.701961, 0.701961, 0.25098)
ItemList/font_sizes/font_size = 16
ItemList/styles/bg = SubResource("StyleBoxFlat_jefce")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8lkh")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1277.0
offset_bottom = 717.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.599995, 0.599988)
texture = ExtResource("2_le2f0")

[node name="DisplayText" type="Label" parent="."]
layout_mode = 2
offset_left = 916.0
offset_top = 127.0
offset_right = 1674.0
offset_bottom = 406.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Testing"
horizontal_alignment = 3
vertical_alignment = 3
autowrap_mode = 3
justification_flags = 128

[node name="ListItem" type="ItemList" parent="."]
self_modulate = Color(1, 1, 1, 0.682353)
layout_mode = 2
offset_left = 900.0
offset_top = 483.0
offset_right = 1273.0
offset_bottom = 675.0
scale = Vector2(2.11924, 2.54027)
theme = SubResource("Theme_d53fw")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/icon_margin = 100
theme_override_font_sizes/font_size = 30
max_text_lines = 2
auto_height = true
text_overrun_behavior = 4
item_count = 4
item_0/text = "      A"
item_1/text = "      B"
item_2/text = "      C"
item_3/text = "      D"

[node name="RestartButton" type="Button" parent="."]
layout_mode = 2
offset_left = 884.0
offset_top = 978.0
offset_right = 1696.0
offset_bottom = 1021.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Restart"
text_overrun_behavior = 4

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 884.0
offset_top = 1030.0
offset_right = 1696.0
offset_bottom = 1073.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Quit"
text_overrun_behavior = 4

[connection signal="item_selected" from="ListItem" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="RestartButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
